<?xml version="1.0" encoding="utf-8"?>

<layout >
<!--
    <data>
        <variable
            name="name"
            type="com.example.gosia.rssreader.MainActivity"/>
    </data>
    -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/first_layout"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/frame_bbc_news"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <View
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/round_shape"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/BubbleText.Small"
                android:onClick="selectSource"
                android:text="@string/bbc_news"/>
        </FrameLayout>

        <View
            android:layout_width="15dp"
            android:layout_height="15dp"/>

        <FrameLayout
            android:id="@+id/frame_bnbc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <View
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/round_shape"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/BubbleText.Big"
                android:onClick="selectSource"
                android:text="@string/cnbc"/>
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/second_layout"
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/frame_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <View
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:background="@drawable/round_shape"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:onClick="selectSource"
                style="@style/BubbleText.Big"/>
        </FrameLayout>

        <View
            android:layout_width="15dp"
            android:layout_height="15dp" />

        <FrameLayout
            android:id="@+id/frame_business_insider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <View
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:background="@drawable/round_shape"/>

            <TextView
                android:layout_width="81dp"
                android:layout_height="wrap_content"
                style="@style/BubbleText.Small"
                android:onClick="selectSource"
                android:text="@string/business_insider"/>
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/frame_reuters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <View
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:background="@drawable/round_shape"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/BubbleText.Medium"
                android:onClick="selectSource"
                android:text="@string/reuters"/>
        </FrameLayout>

        <View
            android:layout_width="15dp"
            android:layout_height="15dp"/>

        <FrameLayout
            android:id="@+id/frame_cnn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <View
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/round_shape"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/BubbleText.Big"
                android:onClick="selectSource"
                android:text="@string/cnn"/>
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/frame_financial_times"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <View
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:background="@drawable/round_shape"/>

            <TextView
                android:id="@+id/textView"
                style="@style/BubbleText.VerySmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="selectSource"
                android:text="@string/financial_times" />
        </FrameLayout>

        <View
            android:layout_width="15dp"
            android:layout_height="15dp"/>

        <FrameLayout
            android:id="@+id/frame_the_economist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <View
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/round_shape"/>

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                style="@style/BubbleText.VerySmall"
                android:onClick="selectSource"
                android:text="@string/the_economist"/>
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/frame_t3n"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <View
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/round_shape" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/BubbleText.Big"
                android:onClick="selectSource"
                android:text="@string/t3n"/>

        </FrameLayout>


        <View
            android:layout_width="15dp"
            android:layout_height="15dp"/>

        <FrameLayout
            android:id="@+id/frame_newsweek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <View
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/round_shape" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/BubbleText.Small"
                android:onClick="selectSource"
                android:text="@string/newsweek"/>
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/frame_sky_news"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <View
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:background="@drawable/round_shape"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/BubbleText.Small"
                android:onClick="selectSource"
                android:text="@string/sky_news"/>
        </FrameLayout>

        <View
            android:layout_width="15dp"
            android:layout_height="15dp" />

        <FrameLayout
            android:id="@+id/frame_focus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <View
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/round_shape"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/BubbleText.Medium"
                android:onClick="selectSource"
                android:text="@string/focus"/>
        </FrameLayout>
    </LinearLayout>

</LinearLayout>
</layout>